fix overlapping widt

--- a/src/components/about.css
+++ b/src/components/about.css
@@ -1,6 +1,8 @@
 .about-container {
   margin: 0;
   background-color: white;
+  width: 100%;
+  max-width: 100%;
 }
 .about-section {
   padding: 3rem 4rem;
