--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -1,4 +1,6 @@
 .contact-container {
+  width: 100%;
+  max-width: 100%;
   background-color: white;
   overflow: hidden;
   display: flex;
