--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -5,8 +5,10 @@
   align-items: center;
   color: white;
   background-color: rgb(18, 30, 39);
-  width: 100vw;
-  min-width: 1100px;
+  width: 100%;
+
+  max-width: 100%;
+
   padding: 1rem 0;
   font-size: xx-small;
 }
