--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -7,6 +7,8 @@ button {
   height: 8rem;
   min-height: 8rem;
   width: 100%;
+
+  max-width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -86,9 +88,11 @@ button {
     align-items: center;
     height: 100vh;
     width: 100%;
-    position: absolute;
+    position: fixed;
+    transform: translateX(-100%);
+    transition: 0.3s easw;
     top: 0;
-    left: -100%;
+
     z-index: -3;
     opacity: 1;
     transition: 0.4s;
@@ -100,7 +104,8 @@ button {
   }
 
   .nav-menu.active {
-    left: 0;
+    transform: translateX(0);
+
     z-index: -2;
     background-color: rgb(18, 30, 39);
     min-height: 100vh;
@@ -111,7 +116,6 @@ button {
 }
 @media (max-width: 425px) {
   .navbar {
-    width: 39%;
     padding: 0 10px;
   }
   .navbar h2 {
