--- a/src/components/skills.css
+++ b/src/components/skills.css
@@ -1,5 +1,7 @@
 .skillsContainer {
   background-color: white;
+  width: 100%;
+  max-width: 100%;
 }
 .skillsHeading h1 {
   font-size: 33px;
